# TZFaceRecognition

./: README.md
Live+FR/FaceRecognition-Flutter/: README.md
Live+FR/FaceRecognition-Flutter/android/app/src/main/kotlin/com/example/facerecognition_flutter/: MainActivity.kt
Live+FR/FaceRecognition-Flutter/lib/: main.dart
SecureZone/: image_processing_ta.c
SecureZone/face_recognition/: CMakeLists.txt
SecureZone/face_recognition/commands/: steps.txt
SecureZone/face_recognition/src/: face_recognition_ta.c  face_recognition_ta.h  main.c  test_main.c
SecureZone/hello_world/ta/: hello_world_ta.c
SecureZone/read_file/: Android.mk  CMakeLists.txt
SecureZone/read_file/host/: .main.c.swp  Makefile  main.c
SecureZone/read_file/ta/: secure_storage_ta.c  user_ta_header_defines.h
SecureZone/read_file/ta/include/: secure_storage_ta.h
SecureZone/ta/: ta.c
app/: pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/jni/: CMakeLists.txt  tee_jni.c
app/android/app/src/main/kotlin/com/example/app/: MainActivity.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: LoginPage.dart  RegisterationPage.dart  main.dart
progress/: 1.MD
test23/FaceRecognition-Flutter/android/app/src/main/kotlin/com/example/facerecognition_flutter/: MainActivity.kt
test23/FaceRecognition-Flutter/lib/: main.dart
